Bug 352005 - Autostart desktop files saved to the wrong location
Summary: Autostart desktop files saved to the wrong location
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_autostart (other bugs)
Version First Reported In: 5.4.0
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Laurent Montel
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-08-30 05:25 UTC by Andrew Chen
Modified: 2015-08-30 06:05 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.4.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andrew Chen 2015-08-30 05:25:51 UTC
This causes adding autostarts of executables (i.e. ones that don't have a desktop file) to not work.

Reproducible: Always

Steps to Reproduce:
1. Add an autostart program to an executable, say ibus-daemon

Actual Results:  
Desktop file saved as ~/.config/autostartibus-daemon.desktop
(notice the missing '/' after autostart)

Expected Results:  
Desktop file saved as ~/.config/autostart/ibus-daemon.desktop
Comment 1 Laurent Montel 2015-08-30 06:05:46 UTC
Git commit e4a5188b05092b1b99b3fdb0cfac1380d2d80d8b by Montel Laurent.
Committed on 30/08/2015 at 06:05.
Pushed by mlaurent into branch 'Plasma/5.4'.

Fix Bug 352005 - Autostart desktop files saved to the wrong location

FIXED-IN: 5.4.1

M  +1    -1    kcms/autostart/autostart.cpp

http://commits.kde.org/plasma-desktop/e4a5188b05092b1b99b3fdb0cfac1380d2d80d8b