Fix Bug 352005 - Autostart desktop files saved to the wrong location

FIXED-IN: 5.4.1
BUG: 352005